--- a/jbrotli-native/win32-x86-64/pom.xml
+++ b/jbrotli-native/win32-x86-64/pom.xml
@@ -19,20 +19,19 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration>
-          <environmentVariables>
-            <LD_LIBRARY_PATH>target/classes</LD_LIBRARY_PATH>
-            <DYLD_LIBRARY_PATH>target/classes</DYLD_LIBRARY_PATH>
-          </environmentVariables>
-        </configuration>
-      </plugin>
 
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -53,6 +52,7 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 
