--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library (brotli ${LIB_TYPE} "brotli/enc/backward_references.cc"
 				"brotli/dec/streams.c"
 				"brotli/dec/state.c"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliCompressor.cxx"
+				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliStreamCompressor.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliDeCompressor.cxx")
 
 SET_TARGET_PROPERTIES(brotli PROPERTIES LINKER_LANGUAGE CXX)
