add new files, in case we upgrade to HEAD of brotli

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,10 @@ add_library (brotli ${LIB_TYPE} "brotli/enc/backward_references.cc"
 				"brotli/enc/metablock.cc"
 				"brotli/enc/static_dict.cc"
 				"brotli/enc/streams.cc"
+#				"brotli/enc/utf8_util.cc"
 				"brotli/dec/bit_reader.c"
 				"brotli/dec/decode.c"
+#				"brotli/dec/dictionary.c"
 				"brotli/dec/huffman.c"
 				"brotli/dec/streams.c"
 				"brotli/dec/state.c"
