--- a/jbrotli-native/win32-x86-64/pom.xml
+++ b/jbrotli-native/win32-x86-64/pom.xml
@@ -20,6 +20,12 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.scijava</groupId>
+      <artifactId>native-lib-loader</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
