--- a/jbrotli/pom.xml
+++ b/jbrotli/pom.xml
@@ -22,6 +22,12 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.scijava</groupId>
+      <artifactId>native-lib-loader</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
