--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.scijava</groupId>
+        <artifactId>native-lib-loader</artifactId>
+        <version>2.1.2</version>
+      </dependency>
+      <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>6.9.9</version>
