--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,16 @@
+
+
+os: Visual Studio 2015
+
 platform:
   - x86
   - x64
-
-configuration:
-  - Release
 
 init:
   - "echo JAVA_HOME=%JAVA_HOME%"
 
 install:
   - GIT: "submodule update --init --recursive"
+
+build_script:
+  - mvn: "clean compile test package"
