try to detect maven version after install

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ init:
 install:
   - GIT: "submodule update --init --recursive"
   - cinst maven
-  - cmd: "mvn --version"
+  - mvn "--version"
 
 build_script:
   - cmd: "mvn clean compile test package"
