--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,5 @@
 
+version: '{build}'
 
 os: Visual Studio 2015
 
@@ -13,8 +14,22 @@ init:
 
 install:
   - GIT: "submodule update --init --recursive"
-  - cinst maven
+  - ps: |
+      Add-Type -AssemblyName System.IO.Compression.FileSystem
+      if (!(Test-Path -Path "C:\maven" )) {
+        (new-object System.Net.WebClient).DownloadFile(
+          'http://www.us.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip',
+          'C:\maven-bin.zip'
+        )
+        [System.IO.Compression.ZipFile]::ExtractToDirectory("C:\maven-bin.zip", "C:\maven")
+      }
+  - cmd: SET PATH=C:\maven\apache-maven-3.3.9\bin;%JAVA_HOME%\bin;%PATH%
+  - cmd: SET MAVEN_OPTS=-XX:MaxPermSize=512m -Xmx1500m
+  - cmd: SET JAVA_OPTS=-XX:MaxPermSize=512m -Xmx1500m
 
 build_script:
-  - cmd: "set"
   - cmd: "mvn clean compile test package"
+
+cache:
+  - C:\maven\
+  - C:\Users\appveyor\.m2
