--- a/jbrotli/pom.xml
+++ b/jbrotli/pom.xml
@@ -23,24 +23,6 @@
 
   <profiles>
     <profile>
-      <id>win32-x86-x64</id>
-      <activation>
-        <os>
-          <family>Windows</family>
-          <arch>x64</arch>
-        </os>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>de.bitkings.jbrotli</groupId>
-          <artifactId>jbrotli-native-win32-x86-64</artifactId>
-          <version>0.2.0-SNAPSHOT</version>
-          <scope>runtime</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-
-    <profile>
       <id>win32-x86-amd64</id>
       <activation>
         <os>
@@ -87,6 +69,42 @@
         <dependency>
           <groupId>de.bitkings.jbrotli</groupId>
           <artifactId>jbrotli-native-darwin</artifactId>
+          <version>0.2.0-SNAPSHOT</version>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+
+    <profile>
+      <id>linux-x86-amd64</id>
+      <activation>
+        <os>
+          <family>unix</family>
+          <arch>amd64</arch>
+        </os>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>de.bitkings.jbrotli</groupId>
+          <artifactId>jbrotli-native-linux-x86-64</artifactId>
+          <version>0.2.0-SNAPSHOT</version>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+    </profile>
+
+    <profile>
+      <id>linux-x86</id>
+      <activation>
+        <os>
+          <family>unix</family>
+          <arch>x86</arch>
+        </os>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>de.bitkings.jbrotli</groupId>
+          <artifactId>jbrotli-native-linux-x86</artifactId>
           <version>0.2.0-SNAPSHOT</version>
           <scope>runtime</scope>
         </dependency>
