refactor parameter converter into it's own source file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_library (brotli ${LIB_TYPE} "brotli/enc/backward_references.cc"
 				"brotli/dec/huffman.c"
 				"brotli/dec/streams.c"
 				"brotli/dec/state.c"
+				"jbrotli-native/src/main/cpp/param_converter.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliCompressor.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliStreamCompressor.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliDeCompressor.cxx")
