--- a/jbrotli-native/darwin/pom.xml
+++ b/jbrotli-native/darwin/pom.xml
@@ -25,6 +25,7 @@
     <dependency>
       <groupId>org.scijava</groupId>
       <artifactId>native-lib-loader</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
