--- a/jbrotli-native/win32-x86/pom.xml
+++ b/jbrotli-native/win32-x86/pom.xml
@@ -24,6 +24,7 @@
     <dependency>
       <groupId>org.scijava</groupId>
       <artifactId>native-lib-loader</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
