little clean up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,15 @@ include_directories(${JNI_INCLUDE_DIRS})
 include_directories(${JNI_LIBRARIES})
 
 SET (LIB_TYPE SHARED)
+SET (CMAKE_JNI_TARGET TRUE)
+SET (CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")
+
+if(WIN32)
+	SET(STATIC_LIBRARY_CXX_FLAGS /MDd)
+	add_compile_options(/EHsc)
+else(WIN32)
+	SET(STATIC_LIBRARY_CXX_FLAGS)
+endif()
 
 add_library (brotli ${LIB_TYPE} "brotli/enc/backward_references.cc"
 				"brotli/enc/block_splitter.cc"
@@ -36,15 +45,4 @@ add_library (brotli ${LIB_TYPE} "brotli/enc/backward_references.cc"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliStreamCompressor.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliDeCompressor.cxx")
 
-SET_TARGET_PROPERTIES(brotli PROPERTIES LINKER_LANGUAGE CXX)
-
-set(CMAKE_JNI_TARGET TRUE)
-
-SET(CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")
-
-if(WIN32)
-	SET(STATIC_LIBRARY_CXX_FLAGS /MDd)
-	add_compile_options(/EHsc)
-else(WIN32)
-	SET(STATIC_LIBRARY_CXX_FLAGS)
-endif()
+SET_TARGET_PROPERTIES (brotli PROPERTIES LINKER_LANGUAGE CXX)
