add hint for optimization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,10 @@ SET (CMAKE_JNI_TARGET TRUE)
 SET (CMAKE_CXX_FLAGS "-std=c++11 -Wall -O3")
 
 if(WIN32)
-	SET(STATIC_LIBRARY_CXX_FLAGS /MDd)
+	SET(STATIC_LIBRARY_CXX_FLAGS /MD)
 	add_compile_options(/EHsc)
+	## doesnt work, why ????
+	string(REPLACE "/O2" "/Ox" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
 else(WIN32)
 	SET(STATIC_LIBRARY_CXX_FLAGS)
 endif()
