--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library (brotli ${LIB_TYPE} "brotli/enc/backward_references.cc"
 				"jbrotli-native/src/main/cpp/param_converter.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliCompressor.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliStreamCompressor.cxx"
+				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliStreamDeCompressor.cxx"
 				"jbrotli-native/src/main/cpp/de_bitkings_jbrotli_BrotliDeCompressor.cxx")
 
 SET_TARGET_PROPERTIES (brotli PROPERTIES LINKER_LANGUAGE CXX)
